# new-adaptivelearning

./: CHANGES.md  README.md  app.py  certificate_generator.py  certificates.csv  content_manager.py  cookies.txt  email_config.py  generate_student_data.py  import_questions.py  init_db.py  main.py  ml_models.py  models.py  pyproject.toml  quiz_generator.py  real_questions.csv  requirements.txt  routes.py  student_quiz_data.csv  test_quiz.py
instance/: adaptive_learning.db
static/css/: style.css
static/js/: dashboard.js  quiz.js
templates/: 404.html  500.html  base.html  base_backup_2025-08-01.html  content.html  content_detail.html  dashboard.html  forgot_password.html  index.html  login.html  quiz.html  register.html  reset_password.html  results.html  start_quiz.html  verify_result.html  verify_search.html
