[project]
name = "adaptive-learning-platform"
version = "1.0.0"
description = "A Flask-based adaptive learning platform that uses machine learning to personalize educational content and quizzes"
authors = [
    {name = "Adaptive Learning Team"}
]
dependencies = [
    "email-validator>=2.2.0",
    "flask-dance>=7.1.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "oauthlib>=3.3.1",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.10.1",
    "flask-login>=0.6.3",
    "xgboost>=3.0.2",
    "pandas>=2.3.1",
    "joblib>=1.5.1",
    "tensorflow>=2.14.0",
    "numpy>=2.3.1",
    "sqlalchemy>=2.0.41",
    "werkzeug>=3.1.3",
    "scikit-learn>=1.7.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
